--- a/odin-rps/index.html
+++ b/odin-rps/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div>Play</div>
-    <div>Rock</div>
-    <div>Paper</div>
-    <div>Scissors</div>
+    <div class="Rock">Rock</div>
+    <div class="Paper">Paper</div>
+    <div class="Scissors">Scissors</div>
     <div>Result: <span></span></div>
   </body>
   <script src="app.js"></script>
