result text logic finished

--- a/odin-rps/index.html
+++ b/odin-rps/index.html
@@ -9,11 +9,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div>Play</div>
+    <div class="test" style="cursor: pointer; user-select: none"></div>
+
     <div class="Rock">Rock</div>
     <div class="Paper">Paper</div>
     <div class="Scissors">Scissors</div>
-    <div>Result: <span></span></div>
+    <div class="Play">Play</div>
+    <div class="Result"></div>
   </body>
   <script src="app.js"></script>
 </html>
