--- a/odin-rps/index.html
+++ b/odin-rps/index.html
@@ -10,12 +10,15 @@
   </head>
   <body>
     <div class="test" style="cursor: pointer; user-select: none"></div>
+    <h1 class="Result">Pick one then click play!</h1>
+    <div class="Options-wrapper">
+      <div class="Rock Option">Rock 🪨</div>
+      <div class="Paper Option">Paper 📰</div>
+      <div class="Scissors Option">Scissors ✂️</div>
+    </div>
 
-    <div class="Rock">Rock</div>
-    <div class="Paper">Paper</div>
-    <div class="Scissors">Scissors</div>
-    <div class="Play">Play</div>
-    <div class="Result"></div>
+    <div class="Play">Play <img src="./images/play-circle.svg" alt="" /></div>
+    <div></div>
   </body>
   <script src="app.js"></script>
 </html>
