grid range input done

--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -9,6 +9,15 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <label for="grid-range"></label>
+    <input
+      type="range"
+      name="grid-range"
+      id="Grid-range"
+      min="16"
+      max="32"
+      value="16"
+    />
     <div class="Grid"></div>
   </body>
   <script src="app.js"></script>
