--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -18,6 +18,7 @@
       max="32"
       value="16"
     />
+    <input type="color" name="" id="Brush-color" />
     <div class="Grid"></div>
   </body>
   <script src="app.js"></script>
