added cell reset

--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <div class="Run">Test</div>
     <label for="grid-range"></label>
     <input
       type="range"
