--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -20,6 +20,7 @@
       value="16"
     />
     <input type="color" name="" id="Brush-color" />
+    <div class="Reset">Reset</div>
     <div class="Grid"></div>
   </body>
   <script src="app.js"></script>
