--- a/odin-etch-a-sketch/index.html
+++ b/odin-etch-a-sketch/index.html
@@ -22,6 +22,8 @@
     <input type="color" name="" id="Brush-color" />
     <div class="Reset">Reset</div>
     <div class="Grid"></div>
+    <div class="Eraser">Eraser</div>
+    <div class="Darkener">Darkener</div>
   </body>
   <script src="app.js"></script>
 </html>
