--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipes</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css" />
-    <!--   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/orange-chicken.html">Orange Chicken</a>
-  </body>
-  <!-- <script src="app.js"></script> -->
+  <body></body>
+  <script src="app.js"></script>
 </html>
