--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <div>Result</div>
+    <div>Clear</div>
+    <div>Backspace</div>
+    <div class="numInput">1</div>
+    <div class="numInput">2</div>
+    <div class="numInput">3</div>
+    <div class="numInput">4</div>
+    <div class="numInput">5</div>
+    <div class="numInput">6</div>
+    <div class="numInput">7</div>
+    <div class="numInput">8</div>
+    <div class="numInput">9</div>
+    <div class="numInput">0</div>
+    <div>.</div>
+    <div class="Test">+</div>
+    <div>-</div>
+    <div>*</div>
+    <div>/</div>
+    <div>=</div>
+  </body>
   <script src="app.js"></script>
 </html>
