--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -11,7 +11,7 @@
   <body>
     <div>Result</div>
     <div>Clear</div>
-    <div>Backspace</div>
+    <div class="backspace">Backspace</div>
     <div class="numInput">1</div>
     <div class="numInput">2</div>
     <div class="numInput">3</div>
