--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -9,8 +9,9 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div>Result</div>
-    <div>Clear</div>
+    <div class="expression"></div>
+    <div class="result">Result</div>
+    <div class="clear">Clear</div>
     <div class="backspace">Backspace</div>
     <div class="numInput">1</div>
     <div class="numInput">2</div>
@@ -23,10 +24,10 @@
     <div class="numInput">9</div>
     <div class="numInput">0</div>
     <div>.</div>
-    <div class="Test">+</div>
-    <div>-</div>
-    <div>*</div>
-    <div>/</div>
+    <div class="operatorInput">+</div>
+    <div class="operatorInput">-</div>
+    <div class="operatorInput">*</div>
+    <div class="operatorInput">/</div>
     <div>=</div>
   </body>
   <script src="app.js"></script>
