--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -23,12 +23,11 @@
     <div class="numInput">8</div>
     <div class="numInput">9</div>
     <div class="numInput">0</div>
-    <div>.</div>
+    <div class="decimal">.</div>
     <div class="operatorInput">+</div>
     <div class="operatorInput">-</div>
     <div class="operatorInput">*</div>
     <div class="operatorInput">/</div>
-    <div>=</div>
   </body>
   <script src="app.js"></script>
 </html>
