--- a/odin-library/index.html
+++ b/odin-library/index.html
@@ -9,21 +9,30 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <input
-      class="titleInput"
-      type="text"
-      placeholder="Title"
-      value="Hello World"
-    />
-    <input class="authorInput" type="text" placeholder="Author" />
-    <input
-      class="pageInput"
-      type="number"
-      name=""
-      id=""
-      placeholder="Current Page"
-    />
-    <button class="submit" type="submit">Submit</button>
+    <form action="">
+      <input
+        class="titleInput"
+        type="text"
+        placeholder="Title"
+        value="Hello World"
+      />
+      <input
+        value="Vicente"
+        class="authorInput"
+        type="text"
+        placeholder="Author"
+      />
+      <input
+        value="1"
+        class="pageInput"
+        type="number"
+        name=""
+        id=""
+        placeholder="Current Page"
+      />
+      <button class="submit" type="submit">Submit</button>
+    </form>
+
     <ul class="libraryList"></ul>
   </body>
   <script src="app.js"></script>
