--- a/odin-library/index.html
+++ b/odin-library/index.html
@@ -4,29 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Odin Library</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <form action="">
+      <input class="titleInput" type="text" placeholder="Title" />
+      <input class="authorInput" type="text" placeholder="Author" />
       <input
-        class="titleInput"
-        type="text"
-        placeholder="Title"
-        value="Hello World"
-      />
-      <input
-        value="Vicente"
-        class="authorInput"
-        type="text"
-        placeholder="Author"
-      />
-      <input
-        value="1"
         class="pageInput"
         type="number"
-        name=""
+        name="pageInput"
         id=""
         placeholder="Current Page"
       />
