--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -4,30 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title></title>
+    <title>Odin Calculator</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <div class="expression"></div>
-    <div class="result">Result</div>
-    <div class="clear">Clear</div>
-    <div class="backspace">Backspace</div>
-    <div class="numInput">1</div>
-    <div class="numInput">2</div>
-    <div class="numInput">3</div>
-    <div class="numInput">4</div>
-    <div class="numInput">5</div>
-    <div class="numInput">6</div>
-    <div class="numInput">7</div>
-    <div class="numInput">8</div>
-    <div class="numInput">9</div>
-    <div class="numInput">0</div>
-    <div class="decimal">.</div>
-    <div class="operatorInput">+</div>
-    <div class="operatorInput">-</div>
-    <div class="operatorInput">*</div>
-    <div class="operatorInput">/</div>
+    <div class="calc-wrapper">
+      <div class="header">calc</div>
+      <div class="display-wrapper">
+        <div class="expression">0</div>
+        <div class="result">0</div>
+      </div>
+
+      <div class="num-wrapper">
+        <div class="numInput">7</div>
+        <div class="numInput">8</div>
+        <div class="numInput">9</div>
+        <div class="backspace">DEL</div>
+        <div class="numInput">4</div>
+        <div class="numInput">5</div>
+        <div class="numInput">6</div>
+        <div class="operatorInput">+</div>
+        <div class="numInput">1</div>
+        <div class="numInput">2</div>
+        <div class="numInput">3</div>
+        <div class="operatorInput">-</div>
+        <div class="decimal">.</div>
+        <div class="numInput">0</div>
+        <div class="operatorInput">/</div>
+        <div class="operatorInput">*</div>
+        <div class="clear">Reset</div>
+      </div>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
