--- a/odin-recipes/recipes/orange-chicken.html
+++ b/odin-recipes/recipes/orange-chicken.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>Odin Recipes - Orange Chicken</title>
     <link rel="stylesheet" href="../styles.css" />
     <!--   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
   </head>
@@ -14,15 +14,15 @@
       src="https://imgs.search.brave.com/zoeikEW6SJePtj7Vo7eCCX6X0LmJjGnUAh9YVUFoX1g/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9oaXBz/LmhlYXJzdGFwcHMu/Y29tL2htZy1wcm9k/L2ltYWdlcy9wYW5k/YS1leHByZXNzLW9y/YW5nZS1jaGlja2Vu/LTMtMTY3MzM2Nzk2/Ni5qcGc_Y3JvcD0x/LjAweHc6MC43Mzd4/aDswLDAuMTQweGgm/cmVzaXplPTk4MDoq"
       alt="orange-chicken"
     />
-    <h2>Description</h2>
+    <h1>Description</h1>
     <p>
       This orange chicken recipe is sticky, sweet, and delicious. It tastes
       similar to the orange chicken from a popular Chinese restaurant in the
       mall! It's easier to make than you think for delicious takeout at home.
     </p>
-    <h2>Ingredients</h2>
-    <h3>Sauce:</h3>
+    <h1>Ingredients</h1>
     <ul>
+      Sauce:
       <li>1 ½ cups water</li>
 
       <li>⅓ cup rice vinegar</li>
@@ -49,12 +49,12 @@
 
       <li>2 tablespoons water</li>
     </ul>
-    <h3>Chicken:</h3>
+
     <ul>
+      Chicken:
       <li>
         2 large skinless, boneless chicken breasts, cut into 1/2-inch cubes
       </li>
-
       <li>1 cup all-purpose flour</li>
 
       <li>¼ teaspoon salt</li>
