--- a/odin-tic-tac-toe/index.html
+++ b/odin-tic-tac-toe/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
+    <p class="result"></p>
     <div class="gameBoard">
       <div class="cell"></div>
       <div class="cell"></div>
