--- a/odin-tic-tac-toe/index.html
+++ b/odin-tic-tac-toe/index.html
@@ -22,6 +22,7 @@
       <div class="cell"></div>
       <div class="cell"></div>
     </div>
+    <button class="reset">New Game</button>
   </body>
   <script src="app.js"></script>
 </html>
