--- a/odin-tic-tac-toe/index.html
+++ b/odin-tic-tac-toe/index.html
@@ -10,6 +10,11 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
+    <div class="changeMarkerWrapper">
+      <p class="markerIndicator">Marker: X</p>
+      <button class="changeMarker">Change Marker</button>
+    </div>
+
     <p class="result"></p>
     <div class="gameBoard">
       <div class="cell"></div>
