--- a/odin-tic-tac-toe/index.html
+++ b/odin-tic-tac-toe/index.html
@@ -28,6 +28,10 @@
       <div class="cell"></div>
     </div>
     <button class="reset">New Game</button>
+    <div class="chooseTurnOrderWrapper">
+      <button class="first">Go First</button>
+      <button class="second">Go Second</button>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
